--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
     
     <!-- Labels on soft keys -->
-    <string name="label_go_key">好</string>
+    <string name="label_go_key">確定</string>
     <string name="label_next_key">下一個</string>
     <string name="label_send_key">送出</string>
 
